# jer.cx

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  Rocket.toml  jer.cx.service  test.sh  up.sql
assets/: .gitignore
assets/public/: lambda-server.sh  resume.html
blogposts/: site.md  video_player.md  virtual_routeros.md  vpn.md
css/: about.scss  blog.scss  index.scss  layout.scss  live.scss  stream.scss
database/: .env  Cargo.toml  Makefile
database/migrations/2019-06-15-134030_ips/: down.sql  up.sql
database/src/: lib.rs  models.rs  schema.rs
frontend/: .gitignore  Makefile  package.json  run
frontend/public/: index.html
frontend/src/: App.js  Downloads.js  Videos.js  index.css
frontend/src/props/: About.js  Blog.js  Blogs.js  Downloads.js  Footer.js  Game.js  Header.js  VideoPlayer.js  Videos.js  dl.js
frontend/src/sass/: Makefile  (+9 more)
html/: About.js  Base.js  Blog.js  Header.js  Index.js  VideoPlayer.js  Videos.js  base.m4  defs.m4  dl.js  footer.html.m4  header.html.m4  header.m4  index.html.m4  stream.html.m4  stream.m4
html/about/: index.html.m4
html/blog/: blog.html.m4  index.html.m4  site.md  video_player.md  virtualize_routeros.md  vpn.md
html/live/: index.html.m4  real-index.html.m4
html/stream/: index.html.m4
js/: index.js  stream.js  websocket.js
migrations/2019-04-03-184314_views/: up.sql
public/: .gitignore  resume.html
root/: burn.sh  login  register
root/live/: index.html  ls  viewers
root/pasta/: index.html
src/: cors.rs  db.rs  main.rs  models.rs  paste_id.rs  posts.rs  schema.rs  video.rs
srv/: copy
(+1 files in other folders)
