[package]
name = "site"
version = "0.1.0"
authors = ["Jeremy Bobbin <jeremybobbin@gmail.com>"]
edition = "2018"

[dependencies]
database = { path = "database" }
rand = "*"
rocket = { version = "*", features = ["tls"] }
rocket_contrib = { version = "*", features = ["diesel_postgres_pool"] }
serde = "*"
serde_derive = "*"
